[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-snow-search"
version = "0.1.0"
description = "In-memory parallel search — sessions, holographic facts, built-in memory (currently supports holographic; other memory providers TBD)"
requires-python = ">=3.11"
authors = [
  { name = "LinQuan" },
  { name = "Snow (AI Girl)" },
]

[project.entry-points."hermes_agent.plugins"]
hermes-snow-search = "hermes_snow_search"

[project.urls]
Homepage = "https://github.com/mlinquan/hermes-snow-search"
